Refactor security layer