@@ -1,5 +1,6 @@
 package com.ercanbeyen.gatewayserver.filter;
 
+import com.ercanbeyen.gatewayserver.exception.UnauthorizedUserException;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,13 +12,14 @@ import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 @Component
 @Slf4j
 public class AuthenticationFilter extends AbstractGatewayFilterFactory<AuthenticationFilter.Config> {
+    private static final String AUTH_URL = "http://localhost:9898/auth";
     @Autowired
     private RouteValidator routeValidator;
     @Autowired
@@ -33,37 +35,43 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
             ServerHttpRequest serverHttpRequest = null;
             if (routeValidator.isSecured.test(exchange.getRequest())) {
                 if (!exchange.getRequest().getHeaders().containsKey(HttpHeaders.AUTHORIZATION)) { // header contains token or not
-                    throw new RuntimeException("Missing authorization header");
+                    throw new UnauthorizedUserException("Missing authorization header");
                 }
 
-                String authHeader = exchange.getRequest().getHeaders().get(HttpHeaders.AUTHORIZATION).get(0);
+                String authHeader = Objects.requireNonNull(
+                        exchange.getRequest()
+                                .getHeaders()
+                                .get(HttpHeaders.AUTHORIZATION))
+                        .get(0);
 
                 if (Optional.ofNullable(authHeader).isPresent() && authHeader.startsWith("Bearer ")) {
                     authHeader = authHeader.substring(7);
                 }
 
                 try {
-                    restTemplate.getForObject("http://localhost:9898/auth/validate?token=" + authHeader, String.class);
-                    Boolean checkRoleResponse = restTemplate.getForObject("http://localhost:9898/auth/check-role?role={role}&token={token}", Boolean.class, config.getRole(), authHeader);
+                    restTemplate.getForObject(AUTH_URL + "/validate?token=" + authHeader, String.class);
+                    Boolean checkRoleResponse = restTemplate.getForObject(AUTH_URL + "/check-role?role={role}&token={token}", Boolean.class, config.getRole(), authHeader);
                     assert checkRoleResponse != null;
 
                     if (!checkRoleResponse) {
+                        log.error("Unauthorized user");
                         var response = exchange.getResponse();
                         response.setStatusCode(HttpStatus.UNAUTHORIZED);
                         return response.setComplete();
                     }
 
-                    String username = restTemplate.getForObject("http://localhost:9898/auth/extract/username?token=" + authHeader, String.class);
+                    String username = restTemplate.getForObject(AUTH_URL + "/extract/username?token=" + authHeader, String.class);
                     serverHttpRequest = exchange.getRequest()
                             .mutate()
-                            .header("username", username)
+                            .header("loggedInUsername", username)
                             .build();
                 } catch (Exception exception) {
                     log.error("RestTemplate did not send the request. Exception: {}", exception.getMessage());
-                    throw new RuntimeException("Unauthorized access. Exception: " + exception.getMessage());
+                    throw exception;
                 }
             }
 
+            assert serverHttpRequest != null;
             return chain.filter(exchange.mutate().request(serverHttpRequest).build());
         });
     }
@@ -75,6 +83,6 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
 
     @Override
     public List<String> shortcutFieldOrder() {
-        return Arrays.asList("role");
+        return List.of("role");
     }
 }
